feat: versión estable con index funcional, imagen de bienvenida y listado de próximos eventos

--- a/templates/sgiiee/base.html
+++ b/templates/sgiiee/base.html
@@ -18,6 +18,8 @@
 
     {% include "sgiiee/partials/navbar.html" %}
 
+    {% block full_width %}{% endblock %}
+
     <main class="container py-4 flex-grow-1">
 
         {% include "sgiiee/partials/messages.html" %}
