--- a/templates/sgiiee/partials/navbar.html
+++ b/templates/sgiiee/partials/navbar.html
@@ -3,7 +3,7 @@
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-            <a class="navbar-brand fw-bold" href="{% url 'eventos:listar_eventos' %}">
+            <a class="navbar-brand fw-bold" href="{% url 'index' %}">
                 <i class="bi bi-ticket-perforated"></i> SGIIEE
             </a>
 
