--- a/eventos/templates/eventos/listar_eventos.html
+++ b/eventos/templates/eventos/listar_eventos.html
@@ -41,9 +41,13 @@
                     </a>
 
                     {% if user.is_staff %}
-                    <div class="d-flex justify-content-between">
-                        <a class="btn btn-warning btn-sm" href="{% url 'eventos:editar_evento' evento.pk %}">Editar</a>
-                        <a class="btn btn-danger btn-sm" href="{% url 'eventos:eliminar_evento' evento.pk %}">Eliminar</a>
+                    <div class="mt-2 d-flex gap-2">
+                        <a class="btn btn-warning btn-sm w-50" href="{% url 'eventos:editar_evento' evento.pk %}">
+                            <i class="bi bi-pencil-square"></i> Editar
+                        </a>
+                        <a class="btn btn-danger btn-sm w-50" href="{% url 'eventos:eliminar_evento' evento.pk %}">
+                            <i class="bi bi-trash"></i> Eliminar
+                        </a>
                     </div>
                     {% endif %}
                 </div>
