--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -4,7 +4,7 @@
 {% block title %}Inicio - SGIIEE{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'styles/index.css' %}">
+<link rel="stylesheet" href="{% static 'styles/core/index.css' %}">
 {% endblock %}
 
 {% block full_width %}
