--- a/templates/sgiiee/partials/navbar.html
+++ b/templates/sgiiee/partials/navbar.html
@@ -25,6 +25,11 @@
                     <i class="bi bi-speedometer2"></i> Panel Admin
                 </a>
             </li>
+            <li>
+                <a class="nav-link" href="{% url 'core:dashboard' %}">
+                    <i class="bi bi-bar-chart-line"></i> Dashboard
+                </a>
+            </li>
             {% endif %}
         </ul>
 
